Fix overflow issue on documentation articles

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -9,6 +9,7 @@
 
 .docs-article {
   flex: 3;
+  overflow-x: auto;
 }
 
 #breadcrumbs {
